--- a/.nojekyll/blocks/cover/__overlay/cover__overlay.css
+++ b/.nojekyll/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,13 @@
 .cover__overlay{
   max-width: 1184px;
   width: 100%;
-  background-color: rgba(0,0,0,0.3);
+  background-color: #2A2C2F;
+}
+.cover__overlay::before{
+  content: '';
+  background: #2A2C2F;
+  opacity: 0.3;
+  cursor: pointer;
 }
 @media screen and (max-width: 1024px) {
   .cover__overlay{
@@ -9,6 +15,10 @@
     height: 640px;
     width: 100%;
     margin: 0 0 92px;
+  }
+  .cover__overlay:hover::before{
+    content: '';
+    opacity: 0.8;
   }
 }
 @media screen and (max-width: 768px) {
