--- a/.nojekyll/blocks/footer/__menu/footer__menu-link.css
+++ b/.nojekyll/blocks/footer/__menu/footer__menu-link.css
@@ -17,6 +17,6 @@
 @media screen and (max-width:320px) {
   .footer__menu-link{
     padding: 0;
-    margin-bottom: 48px;
+    margin: 0 0 48px;
   }
 }
