--- a/.nojekyll/blocks/footer/__link/footer__link.css
+++ b/.nojekyll/blocks/footer/__link/footer__link.css
@@ -2,6 +2,7 @@
   max-width: 106px;
   width: 100%;
   font-family: 'Inter';
+  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
@@ -38,6 +39,6 @@
     max-width: 158px;
     font-size: 24px;
     line-height: 24px;
-    margin: 0;
+    margin: 0 0 32px;
   }
 }
