--- a/.nojekyll/blocks/footer/footer.css
+++ b/.nojekyll/blocks/footer/footer.css
@@ -25,6 +25,6 @@
     flex-direction: column;
     max-width: 186px;
     width: 100%;
-    margin: 0 118px 24px 16px;
+    margin: 0 auto 24px 16px;
   }
 }
