--- a/.nojekyll/blocks/photo-grid/photo-grid.css
+++ b/.nojekyll/blocks/photo-grid/photo-grid.css
@@ -1,34 +1,30 @@
 .photo-grid{
   display: grid;
-  grid-template-columns: repeat(auto-fill,minmax(284px,1fr));
-  grid-template-rows: repeat(3,284px);
+  grid-template-columns: repeat(auto-fit,minmax(284px, 1fr));
   gap:16px;
-  margin: 0 48px 0;
 }
-.photo-grid > div > img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+@media screen and (max-width:1280px){
+  .photo-grid{
+    margin: 0 48px;
+  }
 }
 @media screen and (max-width:1024px){
   .photo-grid{
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
-    grid-template-rows: repeat(4,300px);
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     gap:14px;
+    margin: 0 48px;
   }
 }
 @media screen and (max-width:768px){
   .photo-grid{
-    grid-template-columns: repeat(auto-fill,minmax(352px,1fr));
-    grid-template-rows: repeat(auto,1fr);
+    grid-template-columns: repeat(auto-fit,minmax(352px,1fr));
     gap:16px;
-    margin: 0 24px 0;
+    margin: 0 24px;
 }
 @media screen and (max-width:320px){
   .photo-grid{
-    grid-template-columns: repeat(auto-fill,minmax(288px,1fr));
-    grid-template-rows: repeat(auto,1fr);
+    grid-template-columns: repeat(auto-fit,minmax(288px,1fr));
     gap:12px;
-    margin: 0 16px 0;
+    margin: 0 16px;
   }
 }
