--- a/.nojekyll/blocks/places/__paragraph/place__paragraph.css
+++ b/.nojekyll/blocks/places/__paragraph/place__paragraph.css
@@ -1,4 +1,5 @@
 .place__paragraph{
+  font-family: 'Inter';
   font-weight: 400;
   font-size: 18px;
   line-height: 29.34px;
@@ -22,5 +23,6 @@
   .place__paragraph{
     font-size: 16px;
     line-height: 26.08px;
+    margin: 0 16px 0;
   }
 }
