--- a/.nojekyll/blocks/places/__title/place__title.css
+++ b/.nojekyll/blocks/places/__title/place__title.css
@@ -1,6 +1,7 @@
 .place__title{
   max-width: 460px;
   width: 100%;
+  font-family: 'Inter';
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
@@ -27,5 +28,6 @@
     width: 100%;
     font-size: 32px;
     line-height: 35px;
+    margin: 0 16px 0;
   }
 }
