--- a/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
+++ b/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
@@ -5,7 +5,6 @@
   line-height: 12px;
   letter-spacing: 2px;
   color: #FFFFFF;
-  margin-top: 0;
-  margin-bottom: 12px;
+  margin: 0 0 12px;
   padding: 0;
 }
