--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../.nojekyll/blocks/intro/__text/intro__text.css);
 @import url(../.nojekyll/blocks/intro/__list/intro__list.css);
 @import url(../.nojekyll/blocks/photo-grid/photo-grid.css);
+@import url(../.nojekyll/blocks/photo-grid/__image/photo__image.css);
 @import url(../.nojekyll/blocks/places/places.css);
 @import url(../.nojekyll/blocks/places/__title/place__title.css);
 @import url(../.nojekyll/blocks/places/__image/place__image.css);
