--- a/.nojekyll/blocks/page/page.css
+++ b/.nojekyll/blocks/page/page.css
@@ -5,7 +5,10 @@ a{
   max-width: 1280px;
   width: 100%;
   background-color:#2A2C2F;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   margin: 0 auto;
+  box-sizing: border-box;
+  padding: 28px 48px 24px 48px;
 }
 @media screen and (max-width:1024px) {
   .page{
