--- a/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
+++ b/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
@@ -1,9 +1,10 @@
 .place__website_url-heading{
-  font-family: 'Inter';
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 2px;
+  text-transform: uppercase;
   color: #FFFFFF;
   margin: 0 0 12px;
   padding: 0;
