--- a/.nojekyll/blocks/cover/__overlay/cover__overlay.css
+++ b/.nojekyll/blocks/cover/__overlay/cover__overlay.css
@@ -1,5 +1,8 @@
 .cover__overlay{
+  background-size:cover;
+  background-repeat: no-repeat;
   max-width: 1184px;
+  min-height: 740px;
   width: 100%;
   background-color: #2A2C2F;
   opacity: 0.3;
@@ -11,24 +14,21 @@
 @media screen and (max-width: 1024px) {
   .cover__overlay{
     max-width: 1024px;
-    height: 640px;
+    min-height: 640px;
     width: 100%;
-    margin: 0 0 92px;
   }
 }
 @media screen and (max-width: 768px) {
   .cover__overlay{
     max-width: 768px;
-    height: 480px;
+    min-height: 480px;
     width: 100%;
-    margin: 0 0 88px;
   }
 }
 @media screen and (max-width: 320px) {
   .cover__overlay{
     max-width: 320px;
-    height: 200px;
+    min-height: 200px;
     width: 100%;
-    margin: 0 0 64px;
   }
 }
