--- a/.nojekyll/blocks/cover/cover.css
+++ b/.nojekyll/blocks/cover/cover.css
@@ -4,16 +4,16 @@
   background-size:cover;
   background-repeat: no-repeat;
   max-width: 1184px;
-  max-height: 740px;
+  min-height: 740px;
   width: 100%;
-  margin: 0 48px 92px;
+  margin: 0 48px;
   z-index: 1;
 }
 
 @media screen and (max-width: 1024px) {
   .cover{
     max-width: 1024px;
-    max-height: 640px;
+    min-height: 640px;
     width: 100%;
     margin: 0 0 92px;
   }
@@ -21,7 +21,7 @@
 @media screen and (max-width: 768px) {
   .cover{
     max-width: 768px;
-    height: 480px;
+    min-height: 480px;
     width: 100%;
     margin: 0 0 88px;
   }
@@ -29,7 +29,7 @@
 @media screen and (max-width: 320px) {
   .cover{
     max-width: 320px;
-    height: 200px;
+    min-height: 200px;
     width: 100%;
     margin: 0 0 64px;
   }
