--- a/.nojekyll/blocks/footer/__link/footer__link.css
+++ b/.nojekyll/blocks/footer/__link/footer__link.css
@@ -11,9 +11,6 @@
   transition: all 0.5s ease-out;
   opacity: 1;
 }
-.footer__link:not(:first-child){
-  margin-right: 18px;
-}
 .footer__link:hover{
   opacity: 0.8;
 }
@@ -37,5 +34,6 @@
     font-size: 24px;
     line-height: 24px;
     margin: 0 0 32px;
+    padding: 0;
   }
 }
