--- a/.nojekyll/blocks/footer/__menu/footer__menu-link.css
+++ b/.nojekyll/blocks/footer/__menu/footer__menu-link.css
@@ -4,6 +4,7 @@
   padding: 0;
   list-style: none;
 }
+
 @media screen and (max-width:1024px) {
   .footer__menu-link{
     padding: 0;
@@ -18,5 +19,8 @@
   .footer__menu-link{
     padding: 0;
     margin: 0 0 48px;
+  }
+  .footer__menu-link li:not(:first-child){
+    margin-bottom: 32px;
   }
 }
