--- a/.nojekyll/blocks/footer/footer.css
+++ b/.nojekyll/blocks/footer/footer.css
@@ -4,7 +4,7 @@
   align-items: center;
   max-width: 1184px;
   width: 100%;
-  margin: 0 48px 24px;
+  margin: 92px 48px 24px;
 }
 @media screen and (max-width:1024px) {
   .footer{
