--- a/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
+++ b/.nojekyll/blocks/places/__website/_url-heading/place__website_url-heading.css
@@ -5,7 +5,7 @@
   line-height: 12px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #AAAAAA;
   margin: 0 0 12px;
   padding: 0;
 }
