--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,4 @@
 .header__lang-link{
-  max-width: 30px;
-  width: 100%;
   color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
@@ -18,23 +16,26 @@
 .header__lang-link_EN{
   text-decoration: none;
 }
+.header__lang-link_EN:hover{
+  opacity: 0.8;
+}
+.header__lang-link_RU:hover{
+  opacity: 0.8;
+}
 @media screen and (max-width:1024px) {
   .header__lang-link{
-    max-width: 30px;
     font-size: 24px;
     line-height: 28px;
   }
 }
 @media screen and (max-width:768px) {
   .header__lang-link{
-    max-width: 30px;
     font-size: 24px;
     line-height: 28px;
   }
 }
 @media screen and (max-width:320px) {
   .header__lang-link{
-    max-width: 22px;
     font-size: 18px;
     line-height: 20px;
   }
