--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,27 @@
   align-items: center;
   position: relative;
   flex-direction: row;
-  max-width: 1184px;
   max-height: 52px;
   padding:28px 48px 0;
+}
+@media screen and ( max-width:1280px) {
+  .header{
+    max-width: 1184px;
+  }
+}
+@media screen and ( max-width:1024px) {
+  .header{
+    max-width: 928px;
+  }
+}
+@media screen and ( max-width:768px) {
+  .header{
+    max-width: 720px;
+  }
+}
+@media screen and ( max-width:320px) {
+  .header{
+    max-width: 288px;
+    max-height:42px
+  }
 }
