--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,7 +8,7 @@
   line-height: 36px;
   text-align: center;
   color: #FFFFFF;
-  margin: 0 auto 64px;
+  margin: 0 172px 64px;
 }
 @media screen and (max-width:1024px){
   .lead__subtitle{
