--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,11 +14,13 @@
 }
 @media screen and (max-width:768px){
   .intro{
+    max-width: 720px;
     margin: 0 24px 88px;
   }
 }
 @media screen and (max-width:320px){
   .intro{
+    max-width: 288px;
     margin: 0 16px 64px;
   }
 }
