--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph{
+.places__paragraph{
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -8,19 +8,19 @@
   padding: 0;
 }
 @media screen and (max-width:1024px) {
-  .place__paragraph{
+  .places__paragraph{
     font-weight: 400;
     font-size: 18px;
   }
 }
 @media screen and (max-width:768px) {
-  .place__paragraph{
+  .places__paragraph{
     font-size: 16px;
     line-height: 26.08px;
   }
 }
 @media screen and (max-width:320px) {
-  .place__paragraph{
+  .places__paragraph{
     font-size: 16px;
     line-height: 26.08px;
     margin: 0 16px 0;
