--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -1,4 +1,4 @@
-.place__title{
+.places__title{
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 900;
   font-size: 72px;
@@ -8,13 +8,13 @@
   padding: 0;
 }
 @media screen and (max-width:768px) {
-  .place__title{
+  .places__title{
     font-size: 42px;
     line-height: 46px;
   }
 }
 @media screen and (max-width:320px) {
-  .place__title{
+  .places__title{
     font-size: 32px;
     line-height: 35px;
     margin: 0 16px 0;
