--- a/blocks/places/__website/_link/places__website_link.css
+++ b/blocks/places/__website/_link/places__website_link.css
@@ -1,4 +1,4 @@
-.place__website_link{
+.places__website_link{
   text-decoration: underline;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
@@ -8,6 +8,6 @@
   margin:0;
   padding: 0;
 }
-.place__website_link:hover{
+.places__website_link:hover{
   opacity: 0.8;
 }
