--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,4 +1,4 @@
-.place__website{
+.places__website{
   display: flex;
   flex-direction: column;
   margin:0;
@@ -7,7 +7,7 @@
   margin-left: 32px;
 }
 @media screen and (max-width:320px) {
-  .place__website{
+  .places__website{
     margin: 0 16px 0;
   }
 }
