--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,6 @@
 .photo-grid{
   max-width: 1184px;
-  padding: 0 16px 0;
-  margin: 0;
+  margin: 0 48px;
 }
 @media screen and (max-width:1024px){
   .photo-grid{
@@ -11,5 +10,12 @@
 @media screen and (max-width:768px){
   .photo-grid{
     max-width: 720px;
+    margin: 0 24px;
+  }
+}
+@media screen and (max-width:320px){
+  .photo-grid{
+    max-width: 288px;
+    margin: 0 16px;
   }
 }
