--- a/blocks/footer/__menu/footer__menu-link.css
+++ b/blocks/footer/__menu/footer__menu-link.css
@@ -1,4 +1,10 @@
-.footer__menu-link li{
+li{
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.footer__menu-link  {
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -6,16 +12,24 @@
 }
 
 @media screen and (max-width:320px) {
-  .footer__menu-link{
+  .footer__menu-link {
     display: flex;
     flex-direction: column;
     padding: 0;
     margin: 0 0 48px;
   }
-  .footer__menu-link li:not(:first-child){
+
+  .footer__menu-link:not(:first-child) {
     margin-bottom: 32px;
   }
-  .footer__menu-link li:first-child{
+  li:not(:first-child){
+    margin-bottom: 32px;
+  }
+
+  .footer__menu-link:first-child {
+    margin-bottom: 32px;
+  }
+  li:first-child {
     margin-bottom: 32px;
   }
 }
