--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,27 +1,31 @@
-a{
+a {
   text-decoration: none;
 }
-.page{
+
+.page {
   max-width: 1280px;
   width: 100%;
-  background-color:#2A2C2F;
+  background-color: #2A2C2F;
   font-family: "Inter", Arial, Helvetica, sans-serif;
-  
+  margin: 0 auto;
 }
+
 @media screen and (max-width:1024px) {
-  .page{
+  .page {
     max-width: 1024px;
     width: 100%;
   }
 }
+
 @media screen and (max-width:768px) {
-  .page{
+  .page {
     max-width: 768px;
     width: 100%;
   }
 }
+
 @media screen and (max-width:320px) {
-  .page{
+  .page {
     max-width: 320px;
     width: 100%;
   }
