--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -23,6 +23,14 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 16px;
+    text-align: left;
+  }
+}
+
 @media screen and (max-width:320px) {
   .footer__copyright {
     font-size: 14px;
