--- a/blocks/footer/__menu/footer__menu-link.css
+++ b/blocks/footer/__menu/footer__menu-link.css
@@ -11,6 +11,29 @@ li{
   list-style: none;
 }
 
+@media screen and (max-width:376px) {
+  .footer__menu-link {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0 0 48px;
+  }
+
+  .footer__menu-link:not(:first-child) {
+    margin-bottom: 32px;
+  }
+  li:not(:first-child){
+    margin-bottom: 32px;
+  }
+
+  .footer__menu-link:first-child {
+    margin-bottom: 32px;
+  }
+  li:first-child {
+    margin-bottom: 32px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .footer__menu-link {
     display: flex;
