--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -21,6 +21,13 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .lead {
+    max-width: 376px;
+    padding: 48px 2px 64px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .lead {
     max-width: 320px;
