--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -30,6 +30,14 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+    padding: 0;
+  }
+}
+
 @media screen and (max-width:320px) {
   .footer__link {
     font-size: 24px;
