--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -23,6 +23,15 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .footer {
+    flex-direction: column;
+    max-width: 186px;
+    width: 100%;
+    margin: 0 16px 24px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .footer {
     flex-direction: column;
