--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -26,6 +26,13 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .header {
+    max-width: 288px;
+    max-height: 42px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .header {
     max-width: 288px;
