--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -30,6 +30,16 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .lead__title {
+    max-width: 288px;
+    width: 100%;
+    font-size: 40px;
+    line-height: 44px;
+    margin: 0 auto 16px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .lead__title {
     max-width: 288px;
