--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -22,6 +22,14 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .places__paragraph {
+    font-size: 16px;
+    line-height: 26.08px;
+    margin: 0 16px 0;
+  }
+}
+
 @media screen and (max-width:320px) {
   .places__paragraph {
     font-size: 16px;
