--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -15,6 +15,14 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .places__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 16px 0;
+  }
+}
+
 @media screen and (max-width:320px) {
   .places__title {
     font-size: 32px;
