--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -6,6 +6,12 @@
   margin-top: auto;
 }
 
+@media screen and (max-width:376px) {
+  .places__website {
+    margin: 0 16px 0;
+  }
+}
+
 @media screen and (max-width:320px) {
   .places__website {
     margin: 0 16px 0;
