--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -3,9 +3,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   max-width: 1184px;
-  min-height: 740px;
-  width: 100%;
-  margin: 0 48px;
+  aspect-ratio: 16/10;
+  margin: 0 auto;
   z-index: 1;
 }
 
@@ -16,7 +15,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2A2C2F;
+  background-color: #2A2C2F;
   opacity: 0.3;
   z-index: 1;
 }
@@ -28,31 +27,31 @@
 @media screen and (max-width: 1024px) {
   .cover__overlay {
     max-width: 1024px;
-    min-height: 640px;
     width: 100%;
+    margin: 0;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
     max-width: 768px;
-    min-height: 480px;
     width: 100%;
+    margin: 0;
   }
 }
 
 @media screen and (max-width: 376px) {
   .cover__overlay {
     max-width: 376px;
-    min-height: 220px;
     width: 100%;
+    margin: 0;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
     max-width: 320px;
-    min-height: 200px;
     width: 100%;
+    margin: 0;
   }
 }
