--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -41,6 +41,13 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .header__lang-link {
     font-size: 18px;
