--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -17,6 +17,13 @@
   }
 }
 
+@media screen and (max-width:376px) {
+  .header__logo {
+    max-width: 142px;
+    max-height: 42px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .header__logo {
     max-width: 142px;
