--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,32 +5,33 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 0 148px 92px;
+  margin: 0 auto 92px 148px;
 }
 
 @media screen and (max-width:1024px) {
   .intro {
-    margin: 0 48px 92px;
+    margin: 0 auto 92px 48px;
   }
 }
+
 
 @media screen and (max-width:768px) {
   .intro {
     max-width: 720px;
-    margin: 0 24px 88px;
+    margin: 0 auto 88px;
   }
 }
 
 @media screen and (max-width:376px) {
   .intro {
     max-width: 288px;
-    margin: 0 16px 64px;
+    margin: 0 auto 64px;
   }
 }
 
 @media screen and (max-width:320px) {
   .intro {
     max-width: 288px;
-    margin: 0 16px 64px;
+    margin: 0 auto 64px;
   }
 }
