--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,7 +6,7 @@ a {
   max-width: 1280px;
   width: 100%;
   background-color: #2A2C2F;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   margin: 0 auto;
 }
 
