--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,24 +1,25 @@
 .photo-grid {
   max-width: 1184px;
-  margin: 0 48px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width:1024px) {
   .photo-grid {
     max-width: 928px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width:768px) {
   .photo-grid {
     max-width: 720px;
-    margin: 0 24px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width:320px) {
   .photo-grid {
     max-width: 288px;
-    margin: 0 16px;
+    margin: 0 auto;
   }
 }
