--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,7 +4,7 @@
   grid-column-gap: 40px;
   grid-row-gap: 32px;
   align-items: start;
-  margin: 92px 148px 0;
+  margin: 92px auto 0;
 }
 
 .places:not(:first-child) {
@@ -25,7 +25,7 @@
     display: grid;
     grid-template-columns: 440px 456px;
     grid-column-gap: 32px;
-    margin: 92px 48px;
+    margin: 92px auto;
   }
 }
 
@@ -34,7 +34,7 @@
     display: grid;
     grid-template-columns: 340px 352px;
     grid-column-gap: 28px;
-    margin: 88px 24px 90px;
+    margin: 88px 16px 90px;
   }
 }
 
@@ -42,9 +42,9 @@
   .places {
     display: flex;
     flex-direction: column;
-    width: 376px;
+    max-width: 376px;
     gap: 32px;
-    margin: 64px 0 66px;
+    margin: 64px auto 66px;
   }
 
   .places:not(:first-child) {
@@ -65,9 +65,9 @@
   .places {
     display: flex;
     flex-direction: column;
-    width: 320px;
+    max-width: 320px;
     gap: 32px;
-    margin: 64px 0 66px;
+    margin: 64px auto 66px;
   }
 
   .places:not(:first-child) {
