--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -40,6 +40,14 @@
   }
 }
 
+@media screen and (max-width: 475px) {
+  .cover__overlay {
+    max-width: 475px;
+    width: 100%;
+    margin: 0;
+  }
+}
+
 @media screen and (max-width: 376px) {
   .cover__overlay {
     max-width: 376px;
