--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -24,6 +24,14 @@
   }
 }
 
+@media screen and (max-width: 475px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    margin: 0 16px 33px;
+  }
+}
+
 @media screen and (max-width: 376px) {
   .cover__subtitle {
     font-size: 14px;
