--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -25,6 +25,14 @@
   }
 }
 
+@media screen and (max-width: 475px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin: 33px 16px 16px;
+  }
+}
+
 @media screen and (max-width: 376px) {
   .cover__title {
     font-size: 32px;
