--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -28,6 +28,15 @@
   }
 }
 
+@media screen and (max-width:475px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 44px;
+    margin: 0 auto 16px;
+  }
+}
+
 
 @media screen and (max-width:376px) {
   .lead__title {
