--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,6 +8,13 @@
   padding: 0;
 }
 
+@media screen and (max-width:475px) {
+  .intro__title {
+    font-size: 42px;
+    line-height: 35px;
+  }
+}
+
 @media screen and (max-width:376px) {
   .intro__title {
     font-size: 32px;
