--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,10 +6,17 @@
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
+  margin: 0 332px 195px;
   margin: 0 auto;
   padding: 0;
   position: relative;
   z-index: 2;
+}
+
+@media screen and (max-width: 1280px) {
+  .cover__subtitle {
+    margin: 0 332px 195px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
