--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -21,13 +21,13 @@
 
 @media screen and (max-width: 1024px) {
   .cover__title {
-    margin: 195px 232px 32px;
+    margin: 195px auto 32px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__title {
-    margin: 115px 104px 32px;
+    margin: 115px auto 32px;
   }
 }
 
@@ -35,7 +35,7 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 33px 16px 16px;
+    margin: 33px auto 16px;
   }
 }
 
@@ -43,7 +43,7 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 33px 16px 16px;
+    margin: 33px auto 16px;
   }
 }
 
@@ -51,6 +51,6 @@
   .cover__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 33px 16px 16px;
+    margin: 33px auto 16px;
   }
 }
