--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,8 +6,7 @@
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
-  margin: 0 332px 195px;
-  margin: 0 auto;
+  margin: 0 auto 195px;
   padding: 0;
   position: relative;
   z-index: 2;
@@ -15,19 +14,25 @@
 
 @media screen and (max-width: 1280px) {
   .cover__subtitle {
-    margin: 0 332px 195px;
+    margin: 0 auto 195px;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .cover__subtitle {
-    margin: 0 332px 195px;
+    margin: 0 auto 195px;
+  }
+}
+
+@media screen and (max-width: 888px) {
+  .cover__subtitle {
+    margin: 0 auto 115px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__subtitle {
-    margin: 0 204px 115px;
+    margin: 0 auto 115px;
   }
 }
 
@@ -35,7 +40,7 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 16px 33px;
+    margin: 0 auto 33px;
   }
 }
 
@@ -43,7 +48,7 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 16px 33px;
+    margin: 0 auto 33px;
   }
 }
 
@@ -51,6 +56,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 16px 33px;
+    margin: 0 auto 33px;
   }
 }
