--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,38 +4,41 @@
   align-items: center;
   max-width: 1184px;
   width: 100%;
-  margin: 92px 48px 24px;
+  margin: 92px auto 24px;
 }
 
 @media screen and (max-width:1280px) {
   .footer {
     max-width: 1184px;
-    width: 100%;
-    margin: 92px 48px 24px;
+    margin: 92px auto 24px;
   }
 }
 
 @media screen and (max-width:1248px) {
   .footer {
     max-width: 928px;
-    width: 100%;
-    margin: 0 48px 24px;
+    margin: 92px auto 24px;
   }
 }
 
 @media screen and (max-width:1024px) {
   .footer {
     max-width: 928px;
-    width: 100%;
-    margin: 0 48px 24px;
+    margin: 0 auto 24px;
+  }
+}
+
+@media screen and (max-width:888px) {
+  .footer {
+    max-width: 780px;
+    margin: 0 auto 24px;
   }
 }
 
 @media screen and (max-width:768px) {
   .footer {
     max-width: 720px;
-    width: 100%;
-    margin: 0 24px 24px;
+    margin: 0 auto 24px;
   }
 }
 
@@ -43,7 +46,6 @@
   .footer {
     flex-direction: column;
     max-width: 186px;
-    width: 100%;
     margin: 0 16px 24px;
   }
 }
@@ -52,7 +54,6 @@
   .footer {
     flex-direction: column;
     max-width: 186px;
-    width: 100%;
     margin: 0 16px 24px;
   }
 }
@@ -61,7 +62,6 @@
   .footer {
     flex-direction: column;
     max-width: 186px;
-    width: 100%;
     margin: 0 16px 24px;
   }
 }
