--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -8,10 +8,18 @@
   padding: 0;
 }
 
+.places__paragraph:first-child {
+  margin-bottom: 16px;
+}
+
 @media screen and (max-width:1024px) {
   .places__paragraph {
     font-weight: 400;
     font-size: 18px;
+  }
+
+  .places__paragraph:first-child {
+    margin-bottom: 16px;
   }
 }
 
