--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,6 +2,7 @@
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
   font-size: 12px;
+  font-style: normal;
   line-height: 18px;
   color: #FFFFFF;
   margin: 0;
