--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 .photo-grid {
   max-width: 1184px;
-  margin: 0 auto;
+  margin: 0 auto 92px;
 }
 
 @media screen and (max-width:1024px) {
@@ -13,13 +13,13 @@
 @media screen and (max-width:768px) {
   .photo-grid {
     max-width: 720px;
-    margin: 0 auto;
+    margin: 0 auto 88px;
   }
 }
 
 @media screen and (max-width:320px) {
   .photo-grid {
     max-width: 288px;
-    margin: 0 auto;
+    margin: 0 auto 64px;
   }
 }
