--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -12,7 +12,7 @@
 }
 
 .places:first-child {
-  margin: 92px 148px 80px;
+  margin: 0 148px 80px;
 }
 
 .places:last-child {
@@ -24,7 +24,6 @@
     display: grid;
     grid-template-columns: 440px 456px;
     grid-column-gap: 32px;
-    margin: 92px auto;
   }
 
   .places:not(:first-child) {
@@ -32,7 +31,7 @@
   }
 
   .places:first-child {
-    margin: 92px 48px 80px;
+    margin: 0 48px 80px;
   }
 
   .places:last-child {
@@ -46,7 +45,6 @@
     display: grid;
     grid-template-columns: 440px 456px;
     grid-column-gap: 32px;
-    margin: 92px auto;
   }
 
   .places:not(:first-child) {
@@ -54,7 +52,7 @@
   }
 
   .places:first-child {
-    margin: 92px 48px 80px;
+    margin: 0 48px 80px;
   }
 
   .places:last-child {
@@ -75,7 +73,7 @@
   }
 
   .places:first-child {
-    margin: 88px 24px 73px;
+    margin: 0 24px 73px;
   }
 
   .places:last-child {
@@ -92,11 +90,11 @@
   }
 
   .places:not(:first-child) {
-    margin: 0 24px 73px;
+    margin: 0 18px 73px;
   }
 
   .places:first-child {
-    margin: 88px 24px 73px;
+    margin: 0 18px 73px;
   }
 
   .places:last-child {
@@ -110,7 +108,7 @@
     flex-direction: column;
     max-width: 475px;
     gap: 32px;
-    margin: 64px auto 66px;
+    margin: 0 16px;
   }
 
   .places:not(:first-child) {
@@ -133,7 +131,7 @@
     flex-direction: column;
     max-width: 475px;
     gap: 32px;
-    margin: 64px auto 66px;
+    margin: 0 0 66px;
   }
 
   .places:not(:first-child) {
