--- a/pages/index.css
+++ b/pages/index.css
@@ -14,6 +14,7 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__list/_up-case/intro__list_up-case.css);
+@import url(../blocks/intro/__list/_numb/intro__list_numb.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/photo-grid/__image/photo-grid__image.css);
