--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,6 @@
 .lead__title {
   display: flex;
   justify-content: center;
-  max-width: 720px;
   color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
@@ -21,16 +20,22 @@
 
 @media screen and (max-width:768px) {
   .lead__title {
-    max-width: 720px;
     font-size: 96px;
     line-height: 100px;
     margin: 0 auto 32px;
   }
 }
 
+@media screen and (max-width:680px) {
+  .lead__title {
+    font-size: 66px;
+    line-height: 70px;
+    margin: 0 auto 16px;
+  }
+}
+
 @media screen and (max-width:475px) {
   .lead__title {
-    max-width: 328px;
     font-size: 50px;
     line-height: 44px;
     margin: 0 auto 16px;
