--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,32 +1,32 @@
 .header__logo {
   max-width: 174px;
-  max-height: 61px;
+  width: 100%;
 }
 
 @media screen and (max-width:1024px) {
   .header__logo {
     max-width: 176px;
-    max-height: 52px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width:768px) {
   .header__logo {
     max-width: 176px;
-    max-height: 52px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width:376px) {
   .header__logo {
     max-width: 142px;
-    max-height: 42px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width:320px) {
   .header__logo {
     max-width: 142px;
-    max-height: 42px;
+    width: 100%;
   }
 }
