--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,6 @@
 .cover {
-  position: relative;
-  display: flex;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
@@ -16,9 +15,9 @@
   }
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 576px) {
   .cover {
-    margin: 0 0 64px;
+    margin: 0 0 70px;
   }
 }
 
