--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,8 +1,16 @@
 .cover__overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
   background: url(../../../images/cover/cover-trains.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   max-width: 1184px;
+  width: 100%;
+  text-decoration: none;
   aspect-ratio: 16/10;
   margin: 0 auto;
   z-index: 1;
@@ -21,40 +29,36 @@
 }
 
 .cover__overlay:hover::before {
-  opacity: 0.8;
+  opacity: 0.7;
+  transition: all 0.5s ease-out;
 }
 
 @media screen and (max-width: 1024px) {
   .cover__overlay {
     max-width: 1024px;
-    width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .cover__overlay {
     max-width: 768px;
-    width: 100%;
   }
 }
 
 @media screen and (max-width: 475px) {
   .cover__overlay {
     max-width: 475px;
-    width: 100%;
   }
 }
 
 @media screen and (max-width: 376px) {
   .cover__overlay {
     max-width: 376px;
-    width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .cover__overlay {
     max-width: 320px;
-    width: 100%;
   }
 }
