--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,41 +6,16 @@
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
-  margin: 0 auto 195px;
+  margin: 0;
   padding: 0;
   position: relative;
   z-index: 2;
-}
-
-@media screen and (max-width: 1280px) {
-  .cover__subtitle {
-    margin: 0 auto 195px;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .cover__subtitle {
-    margin: 0 auto 195px;
-  }
-}
-
-@media screen and (max-width: 888px) {
-  .cover__subtitle {
-    margin: 0 auto 115px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__subtitle {
-    margin: 0 auto 115px;
-  }
 }
 
 @media screen and (max-width: 475px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 auto 33px;
   }
 }
 
@@ -48,7 +23,6 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 auto 33px;
   }
 }
 
@@ -56,6 +30,5 @@
   .cover__subtitle {
     font-size: 14px;
     line-height: 16px;
-    margin: 0 auto 33px;
   }
 }
