--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,30 +1,16 @@
 .header__lang-link {
-  color: #FFFFFF;
+  display: flex;
+  color: #FFF;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
   text-align: right;
+  text-decoration: none;
   margin: 0;
   padding: 0;
-}
-
-.header__lang-link_RU {
-  text-decoration: underline;
-  margin-right: 18px;
-}
-
-.header__lang-link_EN {
-  text-decoration: none;
-}
-
-.header__lang-link_EN:hover {
-  opacity: 0.8;
-}
-
-.header__lang-link_RU:hover {
-  opacity: 0.8;
+  opacity: 1;
 }
 
 @media screen and (max-width:1024px) {
