--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,10 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
-  flex-direction: row;
-  max-height: 52px;
-  padding: 28px 48px 0;
+  padding: 28px 48px 73px;
 }
 
 @media screen and (max-width:1280px) {
@@ -17,25 +14,20 @@
 @media screen and (max-width:1024px) {
   .header {
     max-width: 928px;
+    padding: 28px 48px 48px;
   }
 }
 
 @media screen and (max-width:768px) {
   .header {
     max-width: 720px;
-  }
-}
-
-@media screen and (max-width:376px) {
-  .header {
-    max-width: 288px;
-    max-height: 42px;
+    padding: 28px 24px 48px;
   }
 }
 
 @media screen and (max-width:320px) {
   .header {
     max-width: 288px;
-    max-height: 42px;
+    padding: 16px 16px 48px;
   }
 }
