--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,4 @@
 .lead__subtitle {
-  max-width: 640px;
-  width: 100%;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -13,20 +11,14 @@
 
 @media screen and (max-width:1024px) {
   .lead__subtitle {
-    margin: 0 auto 56px;
-  }
-}
-
-@media screen and (max-width:768px) {
-  .lead__subtitle {
+    font-size: 24px;
+    line-height: 25px;
     margin: 0 auto 56px;
   }
 }
 
 @media screen and (max-width:475px) {
   .lead__subtitle {
-    max-width: 328px;
-    width: 100%;
     font-size: 20px;
     line-height: 20px;
     margin: 0 auto 40px;
@@ -35,20 +27,15 @@
 
 @media screen and (max-width:376px) {
   .lead__subtitle {
-    max-width: 288px;
-    width: 100%;
     font-size: 16px;
     line-height: 20px;
-    margin: 0 auto 40px;
   }
 }
 
 @media screen and (max-width:320px) {
   .lead__subtitle {
-    max-width: 288px;
-    width: 100%;
     font-size: 16px;
     line-height: 20px;
-    margin: 0 auto 40px;
+    margin: 0 16px 40px;
   }
 }
