--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -18,15 +18,14 @@
   }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:868px) {
   .lead__title {
     font-size: 96px;
     line-height: 100px;
-    margin: 0 auto 32px;
   }
 }
 
-@media screen and (max-width:680px) {
+@media screen and (max-width:710px) {
   .lead__title {
     font-size: 66px;
     line-height: 70px;
@@ -34,29 +33,26 @@
   }
 }
 
-@media screen and (max-width:475px) {
+@media screen and (max-width:478px) {
   .lead__title {
     font-size: 50px;
     line-height: 44px;
-    margin: 0 auto 16px;
   }
 }
 
 
 @media screen and (max-width:376px) {
   .lead__title {
-    max-width: 288px;
     font-size: 40px;
     line-height: 44px;
-    margin: 0 auto 16px;
+
   }
 }
 
 @media screen and (max-width:320px) {
   .lead__title {
-    max-width: 288px;
     font-size: 40px;
     line-height: 44px;
-    margin: 0 auto 16px;
+    margin: 0 16px 16px;
   }
 }
