--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,40 +4,37 @@
   flex-direction: column;
   max-width: 984px;
   width: 100%;
-  margin: 56px auto 92px;
+  margin: 0 auto 92px;
 }
 
 @media screen and (max-width:1024px) {
   .lead {
     max-width: 928px;
-    margin: 48px auto 92px;
   }
 }
 
 @media screen and (max-width:900px) {
   .lead {
     max-width: 828px;
-    margin: 48px auto 92px;
   }
 }
 
 @media screen and (max-width:768px) {
   .lead {
     max-width: 768px;
-    margin: 48px 0 88px;
+    margin: 0 0 88px;
   }
 }
 
 @media screen and (max-width:376px) {
   .lead {
     max-width: 376px;
-    margin: 48px auto 64px;
+    margin: 0 auto 64px;
   }
 }
 
 @media screen and (max-width:320px) {
   .lead {
     max-width: 320px;
-    margin: 48px auto 64px;
   }
 }
