--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,11 +1,16 @@
 .photo-grid {
   max-width: 1184px;
   margin: 0 auto 92px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  gap: 16px;
+  padding: 0;
 }
 
 @media screen and (max-width:1024px) {
   .photo-grid {
     max-width: 928px;
+    gap: 14px;
     margin: 0 auto;
   }
 }
@@ -13,13 +18,15 @@
 @media screen and (max-width:768px) {
   .photo-grid {
     max-width: 720px;
-    margin: 0 auto 88px;
+    gap: 16px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width:320px) {
   .photo-grid {
     max-width: 288px;
-    margin: 0 auto 64px;
+    gap: 12px;
+    margin: 0 auto;
   }
 }
