--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.places__website_link {
+.place__link {
   text-decoration: underline;
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 400;
@@ -7,8 +7,10 @@
   color: #FFFFFF;
   margin: 0;
   padding: 0;
+  opacity: 1;
 }
 
-.places__website_link:hover {
-  opacity: 0.8;
+.place__link:hover {
+  opacity: 0.7;
+  transition: all 0.5s ease-out;
 }
