--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -1,4 +1,4 @@
-.places__website_url-heading {
+.place__url {
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 12px;
