--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -26,7 +26,7 @@
     margin-bottom: 16px;
   }
   .place__paragraph:last-child {
-    margin: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -34,7 +34,9 @@
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
-    margin: 0;
+    margin: 0 16px;
   }
-
+  .place__paragraph:last-child {
+    margin: 0 16px;
+  }
 }
