--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,4 +1,5 @@
 .lead__subtitle {
+  max-width: 640px;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -19,6 +20,7 @@
 
 @media screen and (max-width:475px) {
   .lead__subtitle {
+    max-width: 288px;
     font-size: 20px;
     line-height: 20px;
     margin: 0 auto 40px;
@@ -26,13 +28,6 @@
 }
 
 @media screen and (max-width:376px) {
-  .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
-  }
-}
-
-@media screen and (max-width:320px) {
   .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
