--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,7 @@
 .lead__title {
   display: flex;
   justify-content: center;
+  max-width: 720px;
   color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
@@ -10,19 +11,6 @@
   text-align: center;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin: 0 auto 32px;
-}
-
-@media screen and (max-width:1024px) {
-  .lead__title {
-    margin: 0 auto 32px;
-  }
-}
-
-@media screen and (max-width:868px) {
-  .lead__title {
-    font-size: 96px;
-    line-height: 100px;
-  }
 }
 
 @media screen and (max-width:710px) {
@@ -35,23 +23,20 @@
 
 @media screen and (max-width:478px) {
   .lead__title {
+    max-width: 288px;
     font-size: 50px;
     line-height: 44px;
   }
 }
 
-
 @media screen and (max-width:376px) {
   .lead__title {
     font-size: 40px;
-    line-height: 44px;
-
   }
 }
 
 @media screen and (max-width:320px) {
   .lead__title {
-    font-size: 40px;
     line-height: 44px;
     margin: 0 16px 16px;
   }
