--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -12,6 +12,10 @@
   padding: 0;
   opacity: 1;
 }
+.header__lang-link:hover {
+  opacity: 0.8;
+  transition: all 0.5s ease-out;
+}
 
 @media screen and (max-width:1024px) {
   .header__lang-link {
