--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,7 +7,7 @@
   line-height: 76px;
   text-align: center;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #FFF;
   margin: 0 0 32px;
   padding: 0;
   position: relative;
@@ -22,9 +22,9 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 390px) {
   .cover__title {
-    max-width: 288px;
-    margin: 0 0 16px;
+    
+    margin: 0 16px 16px;
   }
 }
