--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,20 +14,21 @@
 @media screen and (max-width:1024px) {
   .footer {
     max-width: 928px;
-    margin: 0 16 24px;
+    margin: 0 0 24px;
   }
 }
 
 @media screen and (max-width:993px) {
   .footer {
-    margin: 0 14px 24px;
+    margin-top: 0;
+    margin-bottom: 24px;
   }
 }
 
 @media screen and (max-width:768px) {
   .footer {
     max-width: 720px;
-    margin: 0 13px 24px;
+    margin: 0 24px 24px;
   }
 }
 
