--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -9,6 +9,7 @@
   text-align: right;
   text-decoration: none;
   margin: 0;
+  margin-right: 18px;
   padding: 0;
   opacity: 1;
 }
@@ -17,12 +18,8 @@
   opacity: 0.8;
   transition: all 0.5s ease-out;
 }
-
-@media screen and (max-width:1024px) {
-  .header__lang-link {
-    font-size: 24px;
-    line-height: 28px;
-  }
+.header__lang-link:last-child{
+  margin-right: 0;
 }
 
 @media screen and (max-width:376px) {
