--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,13 +7,11 @@
   line-height: 36px;
   text-align: center;
   color: #FFFFFF;
-  margin: 0 172px 64px;
+  margin: 0 auto 64px;
 }
 
 @media screen and (max-width:1024px) {
   .lead__subtitle {
-    font-size: 24px;
-    line-height: 25px;
     margin: 0 auto 56px;
   }
 }
@@ -21,8 +19,6 @@
 @media screen and (max-width:475px) {
   .lead__subtitle {
     max-width: 288px;
-    font-size: 20px;
-    line-height: 20px;
     margin: 0 auto 40px;
   }
 }
@@ -30,7 +26,6 @@
 @media screen and (max-width:376px) {
   .lead__subtitle {
     font-size: 16px;
-    line-height: 20px;
     margin: 0 16px 40px;
   }
 }
