--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,20 +3,20 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-  color: #FFFFFF;
+  color: #FFF;
   margin: 0;
   padding: 0;
 }
 
 .place__paragraph:first-child {
-  margin-bottom: 16px;
+  margin-bottom: 25px;
 }
 
 .place__paragraph:last-child {
   margin: 0;
 }
 
-@media screen and (max-width:711px) {
+@media screen and (max-width:869px) {
   .place__paragraph {
     font-size: 16px;
     line-height: 26px;
